--- a/java/BUILD
+++ b/java/BUILD
@@ -1,14 +1,14 @@
-package(default_visibility = ["//visibility:public"])
-
-load("//base:base.bzl", "deb_file")
+load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "structure_test")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("//private/oci:defs.bzl", "java_image")
+load("//base:base.bzl", "deb_pkg")
 load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
-load("@io_bazel_rules_docker//java:image.bzl", "java_image")
 load("//cacerts:java.bzl", "cacerts_java")
 load("//java:jre_ver.bzl", "jre_ver")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 load("//:debian_versions.bzl", DEBIAN_VERSIONS = "DEBIAN_PACKAGE_VERSIONS")
+
+package(default_visibility = ["//visibility:public"])
 
 USERS = [
     "root",
@@ -35,30 +35,63 @@ JAVA_VERSIONS = [
 ]
 
 [
-    container_image(
-        name = "java_base" + mode + "_" + user + "_" + arch + "_" + distro,
-        architecture = arch,
-        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + "_" + distro,
-        debs = [
-            deb_file(arch, distro, "zlib1g"),
-            deb_file(arch, distro, "libjpeg62-turbo"),
-            deb_file(arch, distro, "libpng16-16"),
-            deb_file(arch, distro, "liblcms2-2"),
-            deb_file(arch, distro, "libfreetype6"),
-            deb_file(arch, distro, "fonts-dejavu-core"),
-            deb_file(arch, distro, "fontconfig-config"),
-            deb_file(arch, distro, "libexpat1"),
-            deb_file(arch, distro, "libfontconfig1"),
-            deb_file(arch, distro, "libuuid1"),
-            deb_file(arch, distro, "libgraphite2-3"),
-            deb_file(arch, distro, "libharfbuzz0b"),
-            deb_file(arch, distro, "libglib2.0-0"),
-            deb_file(arch, distro, "libpcre3"),
-            deb_file(arch, distro, "libbrotli1"),
-            deb_file(arch, distro, "libcrypt1"),
+    pkg_tar(
+        name = "openjdk_jre_headless_" + java_version + "_" + arch + "_" + distro,
+        symlinks = {
+            "/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java",
+        },
+        deps = [
+            deb_pkg(
+                arch,
+                distro,
+                "openjdk-" + java_version + "-jre-headless",
+            ),
         ],
+    )
+    for java_version in JAVA_VERSIONS
+    for arch in JAVA_ARCHITECTURES
+    for distro in DISTROS
+]
+
+# Base
+[
+    oci_image_index(
+        name = "java_base" + mode + "_" + user + "_" + distro,
+        images = [
+            "java_base" + mode + "_" + user + "_" + arch + "_" + distro
+            for arch in JAVA_ARCHITECTURES
+        ],
+    )
+    for mode in [
+        "",
+        "_debug",
+    ]
+    for user in USERS
+    for distro in DISTROS
+]
+
+[
+    oci_image(
+        name = "java_base" + mode + "_" + user + "_" + arch + "_" + distro,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + "_" + distro,
         env = {"LANG": "C.UTF-8"},
         tars = [
+            deb_pkg(arch, distro, "zlib1g"),
+            deb_pkg(arch, distro, "libjpeg62-turbo"),
+            deb_pkg(arch, distro, "libpng16-16"),
+            deb_pkg(arch, distro, "liblcms2-2"),
+            deb_pkg(arch, distro, "libfreetype6"),
+            deb_pkg(arch, distro, "fonts-dejavu-core"),
+            deb_pkg(arch, distro, "fontconfig-config"),
+            deb_pkg(arch, distro, "libexpat1"),
+            deb_pkg(arch, distro, "libfontconfig1"),
+            deb_pkg(arch, distro, "libuuid1"),
+            deb_pkg(arch, distro, "libgraphite2-3"),
+            deb_pkg(arch, distro, "libharfbuzz0b"),
+            deb_pkg(arch, distro, "libglib2.0-0"),
+            deb_pkg(arch, distro, "libpcre3"),
+            deb_pkg(arch, distro, "libbrotli1"),
+            deb_pkg(arch, distro, "libcrypt1"),
             ":cacerts_java_" + arch + "_" + distro,
             "//locale:locale_" + arch + "_" + distro,
         ],
@@ -72,24 +105,36 @@ JAVA_VERSIONS = [
     for arch in JAVA_ARCHITECTURES
 ]
 
+# Java JRE Headless
 [
-    container_image(
+    oci_image_index(
+        name = "java" + java_version + "_" + user + "_" + distro,
+        images = [
+            "java" + java_version + "_" + user + "_" + arch + "_" + distro
+            for arch in JAVA_ARCHITECTURES
+        ],
+    )
+    for java_version in JAVA_VERSIONS
+    for distro in DISTROS
+    for user in USERS
+]
+
+[
+    oci_image(
         name = "java" + java_version + "_" + user + "_" + arch + "_" + distro,
-        architecture = arch,
         base = ":java_base_" + user + "_" + arch + "_" + distro,
-        debs = [deb_file(
-            arch,
-            distro,
-            "openjdk-" + java_version + "-jre-headless",
-        )],
         # We expect users to use:
         # cmd = ["/path/to/deploy.jar", "--option1", ...]
         entrypoint = [
             "/usr/bin/java",
             "-jar",
         ],
-        env = {"JAVA_VERSION": jre_ver(DEBIAN_VERSIONS[arch][distro]["openjdk-" + java_version + "-jre-headless"])},
-        symlinks = {"/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java"},
+        env = {
+            "JAVA_VERSION": jre_ver(DEBIAN_VERSIONS[arch][distro]["openjdk-" + java_version + "-jre-headless"]),
+        },
+        tars = [
+            ":openjdk_jre_headless_" + java_version + "_" + arch + "_" + distro,
+        ],
     )
     for java_version in JAVA_VERSIONS
     for arch in JAVA_ARCHITECTURES
@@ -97,31 +142,42 @@ JAVA_VERSIONS = [
     for user in USERS
 ]
 
+# Java JRE Headless - Debug
 [
-    container_image(
+    oci_image_index(
+        name = "java" + java_version + "_debug_" + user + "_" + distro,
+        images = [
+            "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro
+            for arch in JAVA_ARCHITECTURES
+        ],
+    )
+    for java_version in JAVA_VERSIONS
+    for distro in DISTROS
+    for user in USERS
+]
+
+[
+    oci_image(
         name = "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro,
         architecture = arch,
         base = ":java_base_debug_" + user + "_" + arch + "_" + distro,
-        debs = [
-            deb_file(
-                arch,
-                distro,
-                "openjdk-" + java_version + "-jre-headless",
-            ),
-            deb_file(
+        # We expect users to use:
+        # cmd = ["/path/to/deploy.jar", "--option1", ...]
+        entrypoint = [
+            "/usr/bin/java",
+            "-jar",
+        ],
+        env = {
+            "JAVA_VERSION": jre_ver(DEBIAN_VERSIONS[arch][distro]["openjdk-" + java_version + "-jre-headless"]),
+        },
+        tars = [
+            ":openjdk_jre_headless_" + java_version + "_" + arch + "_" + distro,
+            deb_pkg(
                 arch,
                 distro,
                 "openjdk-" + java_version + "-jdk-headless",
             ),
         ],
-        # We expect users to use:
-        # cmd = ["/path/to/deploy.jar", "--option1", ...]
-        entrypoint = [
-            "/usr/bin/java",
-            "-jar",
-        ],
-        env = {"JAVA_VERSION": jre_ver(DEBIAN_VERSIONS[arch][distro]["openjdk-" + java_version + "-jre-headless"])},
-        symlinks = {"/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java"},
     )
     for user in USERS
     for java_version in JAVA_VERSIONS
@@ -130,9 +186,9 @@ JAVA_VERSIONS = [
 ]
 
 [
-    container_test(
+    structure_test(
         name = "java_base" + mode + "_" + user + "_" + arch + "_" + distro + "_test",
-        configs = ["testdata/java_base" + mode + ".yaml"],
+        config = ["testdata/java_base" + mode + ".yaml"],
         image = ":java_base" + mode + "_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
@@ -149,9 +205,9 @@ JAVA_VERSIONS = [
 ]
 
 [
-    container_test(
+    structure_test(
         name = "java" + java_version + "_" + user + "_" + arch + "_" + distro + "_test",
-        configs = ["testdata/java" + java_version + "_" + distro + ".yaml"],
+        config = ["testdata/java" + java_version + "_" + distro + ".yaml"],
         image = ":java" + java_version + "_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
@@ -165,9 +221,9 @@ JAVA_VERSIONS = [
 ]
 
 [
-    container_test(
+    structure_test(
         name = "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro + "_test",
-        configs = ["testdata/java" + java_version + "_debug" + "_" + distro + ".yaml"],
+        config = ["testdata/java" + java_version + "_debug" + "_" + distro + ".yaml"],
         image = ":java" + java_version + "_debug_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
@@ -198,9 +254,9 @@ RULE_NAMES = [
 ]
 
 [
-    container_test(
+    structure_test(
         name = "check_certs_" + rule_name + "_test",
-        configs = ["testdata/" + rule_name + "_certs.yaml"],
+        config = ["testdata/" + rule_name + "_certs.yaml"],
         image = ":check_certs_" + rule_name,
         tags = [
             "amd64",
@@ -221,9 +277,9 @@ RULE_NAMES = [
 ]
 
 [
-    container_test(
+    structure_test(
         name = "check_encoding_" + rule_name + "_test",
-        configs = ["testdata/" + rule_name + "_encoding.yaml"],
+        config = ["testdata/" + rule_name + "_encoding.yaml"],
         image = ":check_encoding_" + rule_name,
         tags = [
             "amd64",
@@ -244,9 +300,9 @@ RULE_NAMES = [
 ]
 
 [
-    container_test(
+    structure_test(
         name = "check_libharfbuzz_" + rule_name + "_test",
-        configs = ["testdata/" + rule_name + "_libharfbuzz.yaml"],
+        config = ["testdata/" + rule_name + "_libharfbuzz.yaml"],
         image = ":check_libharfbuzz_" + rule_name,
         tags = [
             "amd64",
