--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -1,37 +1,56 @@
-package(default_visibility = ["//visibility:public"])
-
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
+load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "structure_test")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
+
+package(default_visibility = ["//visibility:public"])
 
 NODEJS_MAJOR_VERISONS = ("14", "16", "18")
 
+MODE = [
+    "",
+    "_debug",
+]
+
+USER = [
+    "root",
+    "nonroot",
+]
+
 [
-    container_image(
+    oci_image_index(
+        name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + distro,
+        images = [
+            "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro
+            for arch in ARCHITECTURES
+        ],
+    )
+    for mode in MODE
+    for user in USER
+    for major_version in NODEJS_MAJOR_VERISONS
+    for distro in DISTROS
+]
+
+[
+    oci_image(
         name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
-        architecture = arch,
         base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + "_" + distro,
         entrypoint = ["/nodejs/bin/node"],
-        tars = ["@nodejs" + major_version + "_" + arch + "//:tar"],
+        tars = [
+            "@nodejs" + major_version + "_" + arch,
+        ],
     )
-    for mode in [
-        "",
-        "_debug",
-    ]
-    for user in [
-        "root",
-        "nonroot",
-    ]
+    for mode in MODE
+    for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
     for distro in DISTROS
 ]
 
 [
-    container_test(
+    structure_test(
         name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro + "_test",
-        configs = [
+        config = [
             "testdata/nodejs" + major_version + ".yaml",
             "testdata/check_npm.yaml",
         ],
@@ -41,60 +60,45 @@ NODEJS_MAJOR_VERISONS = ("14", "16", "18")
             "manual",
         ],
     )
-    for mode in [
-        "",
-        "_debug",
-    ]
-    for user in [
-        "root",
-        "nonroot",
-    ]
+    for mode in MODE
+    for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
     for distro in DISTROS
 ]
 
-exports_files([
-    "testdata/check_certificate.js",
-])
+pkg_tar(
+    name = "check_certificate",
+    srcs = ["testdata/check_certificate.js"],
+)
 
 [
-    container_image(
+    oci_image(
         name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
         base = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
-        files = ["testdata/check_certificate.js"],
+        tars = [
+            ":check_certificate",
+        ],
     )
-    for mode in [
-        "",
-        "_debug",
-    ]
-    for user in [
-        "root",
-        "nonroot",
-    ]
+    for mode in MODE
+    for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
     for distro in DISTROS
 ]
 
 [
-    container_test(
+    structure_test(
         name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro + "_test",
-        configs = ["testdata/check_certificate.yaml"],
+        config = ["testdata/check_certificate.yaml"],
         image = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
             "manual",
         ],
     )
-    for mode in [
-        "",
-        "_debug",
-    ]
-    for user in [
-        "root",
-        "nonroot",
-    ]
+    for mode in MODE
+    for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
     for distro in DISTROS
