--- a/examples/rust/BUILD
+++ b/examples/rust/BUILD
@@ -1,10 +1,11 @@
 # Public notice: this file is for internal documentation, testing, and
 # reference only. Note that repo maintainers can freely change any part of the
 # repository code at any time.
-package(default_visibility = ["//visibility:public"])
 
 # Rust
-load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")
+load("//private/oci:defs.bzl", "rust_image")
+
+package(default_visibility = ["//visibility:public"])
 
 # NOTE: Bazel Rust rules don't support cross-compilation yet,
 # so at this time it's required that you build on the same platform as the image
