--- a/java/testdata/java11_debug_debian11.yaml
+++ b/java/testdata/java11_debug_debian11.yaml
@@ -23,6 +23,6 @@ fileExistenceTests:
     path: "/bin/sh"
     shouldExist: false
 metadataTest:
-  env:
+  envVars:
     - key: 'JAVA_VERSION'
       value: '11.0.18'
