--- a/java/testdata/java17_debian11.yaml
+++ b/java/testdata/java17_debian11.yaml
@@ -22,6 +22,6 @@ fileExistenceTests:
     path: "/usr/lib/jvm/java-17-openjdk-amd64/bin/javac"
     shouldExist: false
 metadataTest:
-  env:
+  envVars:
     - key: 'JAVA_VERSION'
       value: '17.0.6'
