--- a/.cloudbuild/cloudbuild.yaml
+++ b/.cloudbuild/cloudbuild.yaml
@@ -1,4 +1,4 @@
-timeout: 7200s  # 2 hours
+timeout: 10800s  # 3 hours
 
 options:
   machineType: N1_HIGHCPU_8
@@ -12,7 +12,7 @@ artifacts:
 steps:
   - name: gcr.io/cloud-builders/bazel@sha256:e82204cf0715edb80e4957fa55f944b9dd06b0b1c4eb4b0ca0022de7839726f6
     env:
-      - PROJECT_ID=${PROJECT_ID}/testing
+      - PROJECT_ID=${PROJECT_ID}
       - COMMIT_SHA=${COMMIT_SHA}
       - REGISTRY=gcr.io
       - REMOTE_CACHE_GCS=${_REMOTE_CACHE_GCS_}
