refactor: use rules_oci instead of rules_docker (#1256)
* refactor: migrate to rules_oci (#1198)

* refactor: migrate to rules_oci

* chore: update cosign version (#1249)

* Bypass confirmation for keyless signing

* fix: use attest instead of attach (#1255)

* update couldbuild

---------

Co-authored-by: Appu <appu@google.com>

--- a/.cloudbuild/cloudbuild.yaml
+++ b/.cloudbuild/cloudbuild.yaml
@@ -1,4 +1,4 @@
-timeout: 7200s  # 2 hours
+timeout: 10800s  # 3 hours
 
 options:
   machineType: N1_HIGHCPU_8
@@ -17,43 +17,6 @@ steps:
       - REGISTRY=gcr.io
       - REMOTE_CACHE_GCS=${_REMOTE_CACHE_GCS_}
       - KEY=${_KMS_VAL}
+      - KEYLESS=keyless@${PROJECT_ID}.iam.gserviceaccount.com
     entrypoint: bash
     args: [".cloudbuild/release.sh"]
-    
-  - name: docker
-    env:
-    - PROJECT_ID=${PROJECT_ID}
-    - COMMIT_SHA=${COMMIT_SHA}
-    - REGISTRY=gcr.io
-    entrypoint: .cloudbuild/cloudbuild_docker.sh
-
-  - name: ubuntu
-    entrypoint: .cloudbuild/cloudbuild_jq.sh
-
-  - name: gcr.io/projectsigstore/cosign:v1.13.1@sha256:fd5b09be23ef1027e1bdd490ce78dcc65d2b15902e1f4ba8e04f3b4019cc1057
-    env:
-    - PROJECT_ID=${PROJECT_ID}
-    - COMMIT_SHA=${COMMIT_SHA}
-    - REGISTRY=gcr.io
-    # Workaround for: https://github.com/GoogleContainerTools/distroless/issues/914
-    # /tmp has permissions 777
-    - TUF_ROOT=/tmp
-    entrypoint: sh
-    args:
-    - -c
-    - .cloudbuild/cloudbuild_cosign.sh --key $_KMS_VAL
-
-  - name: gcr.io/projectsigstore/cosign:v1.13.1@sha256:fd5b09be23ef1027e1bdd490ce78dcc65d2b15902e1f4ba8e04f3b4019cc1057
-    env:
-    - PROJECT_ID=${PROJECT_ID}
-    - COMMIT_SHA=${COMMIT_SHA}
-    - REGISTRY=gcr.io
-    # Workaround for: https://github.com/GoogleContainerTools/distroless/issues/914
-    # /tmp has permissions 777
-    - TUF_ROOT=/tmp
-    - COSIGN_EXPERIMENTAL=true
-    - GOOGLE_SERVICE_ACCOUNT_NAME=keyless@${PROJECT_ID}.iam.gserviceaccount.com
-    entrypoint: sh
-    args:
-    - -c
-    - .cloudbuild/cloudbuild_cosign.sh
