--- a/debian_packages.yaml
+++ b/debian_packages.yaml
@@ -71,3 +71,14 @@
     - "python3.9-minimal"
     - "zlib1g"
 
+# riscv64, unstable, limited
+- distros: ["unstable"]
+  archs: ["riscv64"]
+  packages:
+    - "base-files"
+    - "ca-certificates"
+    - "libc6"
+    - "libc-bin"
+    - "netbase"
+    - "openssl"
+    - "tzdata"
