--- a/debian_snapshots.yaml
+++ b/debian_snapshots.yaml
@@ -1,3 +1,4 @@
 # AUTO GENERATED
-debian: 20230206T092119Z
-security: 20230208T235359Z
+debian: 20230317T143800Z
+security: 20230318T153419Z
+ports: 20230316T202809Z
