--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -3,10 +3,16 @@ on:
   # will send emails to last editor of this cron syntax (distroless-bot)
   schedule:
     - cron:  '35 8 * * *'
+  workflow_dispatch: # Allow manual runs.
+  
+permissions:
+  contents: read
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
 
     steps:
