--- a/.github/workflows/ci-pkg-mgr.yaml
+++ b/.github/workflows/ci-pkg-mgr.yaml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.16.0'
+        go-version: '1.20'
     - uses: actions/cache@v3
       with:
         path: |
@@ -40,10 +40,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.16.0'
+          go-version: '1.20'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3.4.0
         timeout-minutes: 5
         with:
-          version: latest
+          # version: latest
+          # pinned until https://github.com/golangci/golangci-lint/issues/3862 is fixed
+          version: v1.52
           working-directory: debian_package_manager
