--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   ci-build-test:
     name: CI build and unit test
-    runs-on: ubuntu-20.04 # most compatible with debian 11
+    runs-on: distroless-ci-large-ubuntu-20.04 # custom runner most compatible with debian 11
     steps:
       - uses: actions/checkout@v3
       - name: Mount bazel caches
