--- a/debian_packages.yaml
+++ b/debian_packages.yaml
@@ -71,3 +71,19 @@
     - "python3.9-minimal"
     - "zlib1g"
 
+# debian 12
+- distros: ["debian12"]
+  archs: ["amd64", "arm64", "arm", "s390x", "ppc64le"]
+  packages:
+    - "base-files"
+    - "ca-certificates"
+    - "libc6"
+    - "libc-bin"
+    - "libssl3"
+    - "netbase"
+    - "openssl"
+    - "tzdata"
+    # c++
+    - "libgcc-s1"
+    - "libgomp1"
+    - "libstdc++6"
