feat: Add Node.js support for Debian 12
Signed-off-by: Natsuki Ikeguchi <me@s6n.jp>

--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -3,7 +3,7 @@
 # repository code at any time.
 load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "structure_test")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
+load("//base:distro.bzl", "DISTROS")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 
 package(default_visibility = ["//visibility:public"])
