--- a/debian_packages.yaml
+++ b/debian_packages.yaml
@@ -110,3 +110,33 @@
     - "openjdk-17-jdk-headless"
     - "openjdk-17-jre-headless"
     - "zlib1g"
+
+# debian 12, limited architectures, python only
+- distros: ["debian12"]
+  archs: ["amd64", "arm64"]
+  packages:
+    - "dash"
+    - "libbz2-1.0"
+    - "libcom-err2"
+    - "libcrypt1" # TODO: glibc library for -lcrypt; maybe should be in cc?
+    - "libdb5.3"
+    - "libexpat1"
+    - "libffi8"
+    - "libgssapi-krb5-2"
+    - "libk5crypto3"
+    - "libkeyutils1"
+    - "libkrb5-3"
+    - "libkrb5support0"
+    - "liblzma5"
+    - "libncursesw6"
+    - "libnsl2"
+    - "libpython3.11-minimal"
+    - "libpython3.11-stdlib"
+    - "libreadline8"
+    - "libsqlite3-0"
+    - "libtinfo6"
+    - "libtirpc3"
+    - "libuuid1"
+    - "python3-distutils"
+    - "python3.11-minimal"
+    - "zlib1g"
