--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -1,15 +1,9 @@
 load("//base:distro.bzl", "DISTROS")
-load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
+load("//:checksums.bzl", "ARCHITECTURES")
 load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "structure_test")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 package(default_visibility = ["//visibility:public"])
-
-NODE_ARCHITECTURES = ARCHITECTURES + [
-    "ppc64le",
-    "arm",
-    "s390x",
-]
 
 NODEJS_MAJOR_VERISONS = ("18", "20")
 
@@ -28,7 +22,7 @@ USER = [
         name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + distro,
         images = [
             "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro
-            for arch in NODE_ARCHITECTURES
+            for arch in ARCHITECTURES
         ],
     )
     for mode in MODE
@@ -49,7 +43,7 @@ USER = [
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in NODE_ARCHITECTURES
+    for arch in ARCHITECTURES
     for distro in DISTROS
 ]
 
@@ -69,7 +63,7 @@ USER = [
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in NODE_ARCHITECTURES
+    for arch in ARCHITECTURES
     for distro in DISTROS
 ]
 
@@ -89,7 +83,7 @@ pkg_tar(
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in NODE_ARCHITECTURES
+    for arch in ARCHITECTURES
     for distro in DISTROS
 ]
 
@@ -106,6 +100,6 @@ pkg_tar(
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in NODE_ARCHITECTURES
+    for arch in ARCHITECTURES
     for distro in DISTROS
 ]
